# Natsumin

./: .gitignore  README.md  config.py  config.yaml  config.yml  main.py  pyproject.toml  requirements.txt  strings.yml
assets/: Reminder.sql
assets/orders/: Season X.json  Winter 2025.json  season_x.json  winter2025.json  winter_2025.json
assets/queries/: anilist_media_query.graphql
assets/schemas/: Database.sql  Giveaway.sql  Master.sql  Reminder.sql  Season.sql
cogs/: Errors.py  Giveaway.py  Other.py  Owner.py  Reminder.py
cogs/Contracts/: Contracts.py  Get.py  Profile.py  Stats.py  User.py  Users.py  __init__.py  init.py
cogs/Fun/: Umamusume.py
common/: __init__.py  reminder.py
contracts/: Master.py  Master.sql  Season.sql  __init__.py  classes.py
contracts/seasons/: SeasonX.py  Winter2025.py
extensions/contracts/: Badge.py  Contracts.py  User.py  __init__.py
extensions/fun/: Umamusume.py  __init__.py
extensions/internal/: Errors.py  __init__.py
extensions/other/: __init__.py
extensions/owner/: __init__.py
extensions/reminder/: __init__.py
internal/: checks.py  constants.py  enums.py  exceptions.py  functions.py  schemas.py
internal/base/: bot.py  cog.py  paginator.py  view.py
internal/contracts/: __init__.py  order.py  rep.py  sheet.py  sync.py
scripts/: .gitignore  generate_seasondb.py  master_db_to_json.py  migrate_masterdb_to_database.py  migrate_seasondb_to_database.py  setup_masterdb.py  sync_master_sheet.py  sync_season.py
utils/: __init__.py  contracts.py  other.py  reminder.py  rep.py  time.py
(+3 files in other folders)
